update llm integration