@@ -5,9 +5,9 @@ import org.junit.Test;
 public class IntegerTest {
     @Test
     public void test() {
-        Integer a = new Integer(512);
+        Integer a = Integer.valueOf(512);
         int b = 512;
-        Integer c = new Integer(512);
+        Integer c = Integer.valueOf(512);
         System.out.println(a==b);
         System.out.println(a.equals(b));
         System.out.println(a == c);
